# hsd_utils

./: .gitignore  README.md  changes.md  duplicated_groups.json  duplicates_group.json  pyproject.toml
reproduce/: preprocess.py  preprocess_supercon.py
src/draftsh/: comparison.py  dataset.py  feature.py  parsers.py
src/draftsh/config/convert/: compositional5.json  compositional5_all_tc.json  compositional5_max_tc.json  compositional5_temp_nonSC.json  five_col.json
src/draftsh/config/dataset/: default_forward.json
src/draftsh/config/feature/: xu.json  xu_old.json
src/draftsh/data/: conversion.py
src/draftsh/data/miscs/: csv_compare.py
src/draftsh/data/tests/: snapshot_dataset_bef0d1d5d9.json  snapshot_featurized.npz  snapshot_featurized_bef0d1d5d9.npz
src/draftsh/utils/: conversion_utils.py  test_utils.py  utils.py
src/hsdu/: __init__.py  comparison.py  dataset.py  parsers.py
src/hsdu/config/convert/: all_tcs_test.json  comp5_ss.json  compositional5.json  compositional5_merge2maxTc_1ref.json  compositional5_merge2maxTc_wholedataset.json  supercon_20260430.json
src/hsdu/config/dataset/: default.json  default_forward.json  ss.json  supercon_20260430.json  target_maxTc.json
src/hsdu/config/featurize/: comp146.json  comp450.json  preset_gen.py  test.json  xu.json
src/hsdu/config/preprocess/: all_tcs_test.json  maxTc.json  supercon.json
src/hsdu/convert/: feature.md  feature.py  utils.py
src/hsdu/data/miscs/: BCCfermi.csv  Cayado_et_al_Tables.csv  README.md  csv_compare.py  kitagawa_2020_tables.csv  licence_notes.md  preprocess_supercon.md  preprocess_supercon.py  preprocessed_supercon.csv  preprocessed_supercon_Tcmax_11.csv  xu2025_test_HEAs.csv  xu2025_validation_HEAs.csv
src/hsdu/preprocess/: feature.md  feature.py  utils.py
src/hsdu/utils/: conversion_utils.py  duplicate.py  test_utils.py  utils.py
tests/: dev_comps_merger.py  generate_snapshot.py  temp_fraction_print_error.py  temp_groups_test.py  temp_new_group_algorithm.py  temp_test_update_xutesthea.py  test.py  test_convert.py  test_group_duplicates.py  test_preprocess.py  to_be_refactored.py  to_be_tested.py  utils_for_test.py
(+2 files in other folders)
