[project]
name = "hsdu"
version = "0.1.0"
description = ""
authors = [
    {name = "changhyun yi",email = "chhyyi@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10, <3.14"
dependencies = [
    "pymatgen>=2025.10.7",
    "pandas",
    "numpy (<2.2) ; python_version >= '3.10' and python_version < '3.10'",
    "numpy (<2.5); python_version >= '3.11'",
    "scikit-learn",
    "jinja2"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.convert.dependencies]
matminer = "^0.9.3"

[tool.poetry.group.convert]
optional = true

[tool.poetry.group.dev.dependencies]
ipykernel = "*"