[project]
name = "hsdu"
version = "0.1.1"
description = "Add your description here"
authors = [
    {name = "changhyun yi",email = "chhyyi@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1.6",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "pymatgen>=2025.10.7",
    "scikit-learn",
    "xgboost>=3.1.3",
]

[project.optional-dependencies]
convert = [
    "matminer>=0.9.3",
]

[tool.setuptools.package-data]
hsdu = ["config/**/*.json", "config/**/*.yaml", "config/**/*.yml", "data/**"]

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "notebook>=7.5.3",
    "pandas-stubs>=2.3.3.260113",
    "pip>=26.0.1",
    "ruff>=0.14.13",
]
